--- a/도커에 대해 설명해주세요.md
+++ b/도커에 대해 설명해주세요.md
@@ -6,6 +6,6 @@
 위 장점들을 통해 배포 및 관리가 단순해집니다. <br>
 
 ### 정리
-도커는 격리된 공간에서 프로세스가 동작하고,<br> 실행 환경을 추상화하여 어디서나 동일하게 동작하므로
-환경 차이로 인한 문제가 줄어들어 배포가 쉬워집니다.
+도커는 격리된 공간에서 프로세스가 동작하고,<br>
+실행 환경을 추상화하여 어디서나 동일하게 동작하므로 환경 차이로 인한 문제가 줄어들어 배포가 쉬워집니다.<br>
 또한 가볍고 빠르게 실행되며, 자동화된 배포가 가능해 관리가 단순해집니다.
